# register_rust

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/models/: mod.rs  user.rs
