[package]
name = "register"
version = "0.0.0"
authors = ["Okami <qpham139@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
actix-web = "3"
env_logger = "0.9.0"
json = "0.12.4"
bytes = "1.1.0"
rocksdb = "0.17.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
bincode = "1.3.3"
rand = "0.8.4"

